--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/main.css">
-    <script src="js/bootstrap.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
-    <title>Document</title>
+    <title>Test Project Site</title>
 </head>
 <body>
 <header class="container-fluid justify-content-center align-items-center d-flex">
